# Trabalho-Individual-2022-2-

./: .coverage  .gitlab-ci.yml  docker-compose.yml  pyproject.toml
doc/doxygen/: Doxyfile
doc/source/: conf.py  index.rst
docker/: Dockerfile  docker-compose.yml
docs/: conf.py  parser.rst
docs/_build/doctrees/: data_pipeline.doctree  data_pipeline.feature_engineering.doctree  data_pipeline.pre_processing.doctree  environment.pickle  index.doctree  modules.doctree  parser.doctree
docs/_build/html/: .buildinfo  data_pipeline.feature_engineering.html  data_pipeline.html  data_pipeline.pre_processing.html  genindex.html  index.html  modules.html  objects.inv  parser.html  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: data_pipeline.feature_engineering.rst.txt  data_pipeline.pre_processing.rst.txt  data_pipeline.rst.txt  index.rst.txt  modules.rst.txt
docs/doxygen/: Doxyfile
docs/doxygen/doc/html/: CODE__OF__CONDUCT_8md.html  CONTRIBUTING_8md.html  README_8md.html  YAML__parser_8py.html  annotated.html  classdata__pipeline_1_1feature__engineering_1_1key__smash_1_1KeySmash.html  classdata__pipeline_1_1feature__engineering_1_1word__embedding_1_1WordEmbedding.html  classes.html  classparser_1_1YAML__parser_1_1YAMLParser.html  classparser_1_1YAML__parser_1_1YAMLParser__coll__graph.md5  conf_8py.html  (+120 more)
env/: pyvenv.cfg
poetry/: pyproject.toml  requirements.txt
src/: main.py
src/parser/: YAML_parser.py  model_parser.py
tests/parser/: test_YAML_parser.py  test_feature_engineering_parser.py
(+168 files in other folders)
